[package]
name = "midi_improv_hero"
version = "0.1.0"
edition = "2024"

[dependencies]
midi_note_recorder = {git = "https://github.com/gjf2a/midi_note_recorder"}
music_analyzer_generator = {git = "https://github.com/gjf2a/music_analyzer_generator"}
midi_fundsp = "0.6.7"
anyhow = "1.0.100"
eframe = "0.33.3"
midir = "0.10.3"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
enum-iterator = "2.3.0"